--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -3,9 +3,10 @@
 @tailwind utilities;
 
 :root {
-  --color-primary: #65ad18;
+  --color-primary: #82c837;
   --color-secondary: #4dafd6;
   --color-surface: #f6ffe3;
+  --color-black: #d2d2d2;
 }
 
 * {
@@ -36,29 +37,45 @@ body {
 }
 
 h1 {
-  font-size: 4rem;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+  font-color: var(--color-black);
+  font-family: var(--font-chakra);
+  font-size: 3.25rem;
+  font-weight: bold;
   @media only screen and (max-width: 680px) {
     font-size: 2.5rem;
   }
 }
 
 h2 {
-  font-size: 3.5rem;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+  font-color: var(--color-black);
+  font-family: var(--font-chakra);
+  font-size: 2.75rem;
   @media only screen and (max-width: 680px) {
     font-size: 2rem;
   }
 }
 
 h3 {
-  font-size: 2.5rem;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+  font-color: var(--color-black);
+  font-family: var(--font-chakra);
+  font-size: 2.25rem;
   @media only screen and (max-width: 680px) {
     font-size: 1.75rem;
   }
 }
 
 p {
-  font-family: var(--font-satoshi);
-  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0.25rem;
+  font-color: var(--color-black);
+  font-family: var(--font-chakra);
+  font-size: 1rem;
   @media only screen and (max-width: 680px) {
     font-size: 1rem;
   }
