--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -10,10 +10,27 @@
   --color-black: #2d2d2d;
   --color-accent: #ffe236;
   --color-red: #dc3030;
-  /* adding new figma color to alpha test */
   --border-neutral: #d5d5d5;
   --border-hover: #ff9500;
   --base-orange: #fff4e6;
+  /* add figma UI system color pallette light */
+  --color-grey-900: #000000;
+  --color-grey-500: #8c8c8c;
+  --color-grey-400: #acacac;
+  --color-grey-200: #eeeeee;
+  --color-grey-100: #f1f1f1;
+  --color-grey-0: #ffffff;
+  --color-green-600: #3e920f;
+  --color-green-500: #65ad18;
+  --color-green-50: #c7eb9a;
+  --color-green-25: #e2f5cb;
+  --color-red-600: #d03a3a;
+  --color-red-500: #eb4848;
+  --color-red-100: #ffcfcf;
+  --color-orange-500: #ff9500;
+  --color-orange-50: #fff4e6;
+  --color-cyan-500: #2baac7;
+  --color-cyan-50: #e5f7fa;
 }
 
 * {
