--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -171,7 +171,7 @@ caption {
 }
 
 .section-layout {
-  @apply border1 relative rounded-3xl bg-neutral p-8;
+  @apply border1 relative overflow-hidden rounded-3xl bg-neutral p-8;
 }
 
 /* Hide number input arrows */
