--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -174,6 +174,10 @@ caption {
   @apply border1 relative rounded-3xl bg-neutral p-8;
 }
 
+.page-layout {
+  @apply flex w-full max-w-6xl flex-col gap-10 p-8;
+}
+
 /* Hide number input arrows */
 .hide-input-arrows::-webkit-outer-spin-button,
 .hide-input-arrows::-webkit-inner-spin-button {
