--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -174,6 +174,10 @@ caption {
   @apply border1 relative overflow-hidden rounded-3xl bg-neutral p-8;
 }
 
+.pool-footer {
+  @apply flex w-full p-4 items-center gap-4 rounded-[20px] bg-secondary-soft
+}
+
 /* Hide number input arrows */
 .hide-input-arrows::-webkit-outer-spin-button,
 .hide-input-arrows::-webkit-inner-spin-button {
