Have waiting notif

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -200,3 +200,16 @@ caption {
 .no-icon .Toastify__toast-icon {
   display: none;
 }
+
+.animate-spin {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
