add the following:  - Create `InfoIcon` component with children prop  - Adjust tooltip class to match Figma design (softer background)  - Add InfoIcon to community page registration detail  - Cleanup

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -173,8 +173,8 @@ caption {
 }
 
 .tooltip {
-  --tooltip-color: #8c8c8c;
-  --tooltip-text-color: #ffffff;
+ --tooltip-color: #1F2937;
+ --tooltip-text-color: #ffffff;
 }
 
 .tooltip:before {
