--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -169,7 +169,7 @@ caption {
 }
 
 .page-layout {
-  @apply flex w-full max-w-6xl flex-col gap-10 p-8;
+  @apply flex w-full max-w-6xl flex-col gap-10 p-4 md:p-8;
 }
 
 .tooltip {
