:art: Updated styles and labels
- Switched from using CSS to SCSS for global styles
- Adjusted the label text in CommunityForm component
- Simplified class names in FormInput component
- Added list styling rules in the new SCSS file
":recycle: Refactored code and improved UI

- Transitioned from CSS to SCSS for global styles
- Simplified error message in CommunityForm component
- Lowercased label text in FormCheckBox of CommunityForm component
- Removed unnecessary class name in FormInput component
- Adjusted equality check in getChain function of chains.tsx file
- Added list styling rules in the new SCSS file"

--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -222,3 +222,13 @@ caption {
     display: none;
   }
 }
+
+.md-editor-preview {
+  ol {
+    list-style-type: decimal;
+  }
+
+  ul {
+    list-style: unset;
+  }
+}
