:sparkles: Enhanced UI and functionality for community pools
- Improved the layout and readability of form previews by removing unnecessary titles and adjusting text styles
- Updated the ActivatePoints component to use poolId instead of communityAddress for better accuracy
- Added new subscription topics in the Page component to listen for activatePoints and deactivatePoints updates
- Simplified conditional rendering logic in the Page component
- Adjusted PoolHeader to ensure proper loading state display
- Implemented real-time member power update in Proposals component using PubSub subscriptions
- Removed redundant capitalize function call from ProposalForm
- Made minor CSS adjustments, including hiding markdown editor gutters and adding markdown overrides.

--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -223,6 +223,8 @@ caption {
   }
 }
 
+// Markdown overrides
+
 .md-editor-preview,
 .wmde-markdown {
   ol {
@@ -232,4 +234,8 @@ caption {
   ul {
     list-style-type: unset !important;
   }
+}
+
+.cm-gutters {
+  display: none !important;
 }
