feat: adjust communities page to 2 columns layout + add component to main section and also to right section. Upgrade overall layout

--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -149,7 +149,7 @@ caption {
 }
 
 .section-layout {
-  @apply border1 relative rounded-3xl bg-neutral p-8;
+  @apply border1 relative rounded-xl bg-neutral p-8;
 }
 
 .page-layout {
