--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -149,7 +149,7 @@ caption {
 }
 
 .section-layout {
-  @apply border1 relative rounded-xl bg-neutral p-8;
+  @apply border1 relative rounded-lg bg-neutral p-6;
 }
 
 .page-layout {
