--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -156,6 +156,10 @@ caption {
   @apply flex w-full max-w-6xl flex-col gap-10 p-4 md:p-8 overflow-x-visible;
 }
 
+.pool-layout {
+  @apply grid grid-cols-1 md:grid-cols-2 gap-4;
+}
+
 .tooltip {
   --tooltip-color: #1f2937;
   --tooltip-text-color: #ffffff;
