--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -50,7 +50,7 @@ h1 {
   margin-bottom: 1rem;
   margin-top: 0.5rem;
   font-family: var(--font-chakra);
-  font-size: 52px;
+  font-size: 44px;
   font-weight: 700;
   line-height: 56px;
   text-align: left;
@@ -62,7 +62,7 @@ h1 {
 
 h2 {
   font-family: var(--font-chakra);
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 600;
   line-height: 46px;
   text-align: left;
@@ -72,10 +72,21 @@ h2 {
   } */
 }
 
-h3,
+h3 {
+  font-family: var(--font-inter);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: auto;
+  text-align: left;
+
+  /* @media only screen and (max-width: 680px) {
+    font-size: 1.75rem;
+  } */
+}
+
 h4 {
   font-family: var(--font-inter);
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 500;
   line-height: auto;
   text-align: left;
