Fix streaming design + pimpup some details

--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -303,4 +303,40 @@ dialog * {
     right: auto;
     bottom: var(--tooltip-tail-offset);
   }
+
+  .tooltip-bottom-right::before {
+    transform: translateX(-10%);
+    top: var(--tooltip-offset);
+    top: auto;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+  }
+
+  .tooltip-bottom-right::after {
+    transform: translateX(-50%);
+    border-color: var(--tooltip-color) transparent transparent transparent;
+    top: var(--tooltip-tail-offset);
+    left: 50%;
+    right: auto;
+    bottom: auto;
+  }
+
+  .tooltip-bottom-left::before {
+    transform: translateX(-80%);
+    top: var(--tooltip-offset);
+    top: auto;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+  }
+
+  .tooltip-bottom-left::after {
+    transform: translateX(-50%);
+    border-color: var(--tooltip-color) transparent transparent transparent;
+    top: var(--tooltip-tail-offset);
+    left: 50%;
+    right: auto;
+    bottom: auto;
+  }
 }
