--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -353,3 +353,8 @@ dialog * {
 .mdxeditor-popup-container {
   z-index: 999999999 !important;
 }
+
+// Hide diff source button
+._ggDiffSourceToggle_1e2ox_994 ._toolbarToggleItem_1e2ox_208:nth-of-type(2) {
+  display: none !important;
+}
