Fix bullet and numeric points not rendered

--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -326,7 +326,8 @@ dialog * {
 
 /* MDXMarkdown */
 
-.mdxeditor-root-contenteditable {
+.mdxeditor-root-contenteditable,
+.wmde-markdown {
   ul {
     @apply list-disc ml-2;
   }
