Link style in markdwon editor

--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -349,6 +349,9 @@ dialog * {
   h5 span {
     @apply text-base font-bold;
   }
+  a {
+    @apply text-accent underline;
+  }
 }
 
 .mdxeditor-popup-container {
