Fix markdown editor fullscreen bg transparent and toggle off not working

--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -379,6 +379,7 @@ dialog * {
 .mdxeditor-popup-container {
   position: fixed !important;
   z-index: 999999999 !important;
+  background-color: var(--baseBase);
 
   button {
     cursor: pointer;
