Tighten dapp UI copy and styles

--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -420,7 +420,7 @@ dialog * {
     color: var(--color-text);
   }
 
-  ._placeholder_1e2ox_1106 {
+  ._placeholder_1e2ox_1106 p {
     color: #9f9f9f;
   }
 
