--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -14,7 +14,7 @@
   --border-neutral: #d5d5d5;
   --border-hover: #ff9500;
   --base-orange: #fff4e6;
-  --color-text: #000000 /* add figma UI system color pallette light */
+  --color-text: #000000; /* add figma UI system color pallette light */
     --color-grey-900: #000000;
   --color-grey-500: #8c8c8c;
   --color-grey-400: #acacac;
