--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -435,32 +435,8 @@ dialog * {
     margin-bottom: 0.5rem;
   }
 
-  :is(h1, h2, h3, h4, h5, h6) {
-    position: relative;
-  }
-
   :is(h1, h2, h3, h4, h5, h6) > a[href^="#"] {
-    position: absolute;
-    left: 0rem;
-    top: 50%;
-    transform: translateY(-50%);
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 1.25rem;
-    height: 1.25rem;
-    color: var(--color-grey-400);
-    text-decoration: none;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.2s ease;
-  }
-
-  :is(h1, h2, h3, h4, h5, h6):hover > a[href^="#"],
-  :is(h1, h2, h3, h4, h5, h6):focus-within > a[href^="#"],
-  :is(h1, h2, h3, h4, h5, h6) > a[href^="#"]:focus {
-    opacity: 1;
-    visibility: visible;
+    display: none;
   }
 
   blockquote {
