feat: enhance ClientPage layout for mobile view, improve DataTable styling, and adjust InfoBox text size

--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -85,9 +85,10 @@ h2 {
   text-align: left;
   color: var(--color-text);
 
-  /* @media only screen and (max-width: 680px) {
-    font-size: 2rem;
-  } */
+  @media only screen and (max-width: 680px) {
+    font-size: 24px;
+    line-height: 23px;
+  }
 }
 
 h3 {
