--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -185,7 +185,7 @@ caption {
 }
 
 .section-layout {
-  @apply border1 relative rounded-xl bg-neutral p-6;
+  @apply border1 relative rounded-xl bg-neutral p-6 shadow-sm;
 }
 
 .page-layout {
