feat: enhance PoolGovernance, PoolHeader, and PoolMetrics components layout and styling, update terminology to "VP"

--- a/apps/web/styles/globals.scss
+++ b/apps/web/styles/globals.scss
@@ -185,7 +185,7 @@ caption {
 }
 
 .section-layout {
-  @apply border1 relative rounded-xl bg-neutral p-6 shadow-sm;
+  @apply border1 relative rounded-xl bg-neutral p-6 shadow-md;
 }
 
 .page-layout {
